@@ -1,3 +1,7 @@
+2007-07-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* Makefile.am: added missing libs (for xcursor).
+
 2007-07-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* theme-thumbnailer.c: (main): call g_thread_init
